--- a/src/Pages/Public/Header/Header.Container.css
+++ b/src/Pages/Public/Header/Header.Container.css
@@ -1,12 +1,11 @@
 header {
-    background-color: #ccc;
-    display: block;
-    height: 60px;
-
-    font-size: 20px;
-    text-align: center;
+  display: block;
+  display: flex;
+  justify-content: center;
 }
 
-header h1 {
-    margin: 0;
+.header-container {
+    width: 1000px;
+    height: 120px;
+    padding: 20px 20px;
 }
