--- a/src/Pages/Public/Todo/Todo.Container.css
+++ b/src/Pages/Public/Todo/Todo.Container.css
@@ -1,6 +1,55 @@
+.background-color1 {
+    background-color: rgba(217, 224, 205, 0.3);
+}
+
+.background-color2 {
+    background-color: rgba(153, 201, 2020, 0.3);
+}
+
+.background-color3 {
+    background-color: rgba(160, 197, 85, 0.3);
+}
+
 .container {
     width: 300px;
-    background-color: #fff;
-    border: solid 1px #000 ;  
+
+    border-radius: 5px;
+    border: solid 1px #ccc ;  
+    margin: 20px 10px 0;
+    min-height: 50px;
+
+}
+
+.container__header {
+    position: relative;
+    border-bottom: solid 1px #ccc;
+    height: 40px;
+    line-height: 40px
+}
+
+.container__header h3 {
+    display: inline;
+    margin-left: 8px;
     
+}
+
+.container__header .add-new {
+    position: absolute;
+    top: 4px;
+    right: 10px;
+
+    padding: 8px 8px;
+    line-height: 100%;
+
+    background-color: rgb(146, 142, 189);
+}
+
+.container__header .add-new:hover {
+    background-color: rgb(25, 13, 151);
+
+}
+
+.container__todo-list {
+    display: flex;
+    flex-direction: column;
 }
