--- a/src/MyComponents/TodoCard/TodoCardComponent/ModalEdit/ModalEdit.Component.css
+++ b/src/MyComponents/TodoCard/TodoCardComponent/ModalEdit/ModalEdit.Component.css
@@ -17,43 +17,31 @@
   position: relative;
   width: 400px;
   min-height: 100px;
+  height: 500px;
 
   margin-top: 30px;
   padding: 10px;
 
-  background-color: #556B2F;
+  background-color: #fff;
   border-radius: 5px;
 }
-
-.modal-description__title {
-  border-bottom: solid 1px #ccc;
-}
-
-
 
 .modal-description__description {
   border-bottom: solid 1px #ccc;
   padding: 5px;
 }
 
-.modal-description__item:hover {
-  background-color: rgb(120, 45, 163);
+.update-form {
+  margin-left: 10px;
 }
 
-.modal-description__list p {
-  color: white;
+.form-title {
+  font-size: 20px;
+  margin-left: -10px;
 }
 
-.description-button {
-  padding: 0 20px;
-  cursor: pointer;
-  border: none;
-  color: white;
-  margin: 0;
-}
-
-.modal__delete-button {
+.update-button {
   position: absolute;
-  bottom: 10px;
-  right: 20px;
+  right: 10px;
+  top: 80px
 }
